Add and modify files

--- a/Container-Orchestration-Tutorial/sample-1/sample-1-nb.ipynb
+++ b/Container-Orchestration-Tutorial/sample-1/sample-1-nb.ipynb
@@ -143,7 +143,14 @@
    "id": "97d9fc85-75c0-4be4-8c5e-993ae4d00836",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%sh\n",
+    "kubectl create deployment hello-minikube /\n",
+    "    --image=kicbase/echo-server:1.0\n",
+    "kubectl expose deployment hello-minikube /\n",
+    "    --type=NodePort /\n",
+    "    --port=8080"
+   ]
   }
  ],
  "metadata": {
