Add and modify files

--- a/Container-Orchestration-Tutorial/sample-1/sample-1-nb.ipynb
+++ b/Container-Orchestration-Tutorial/sample-1/sample-1-nb.ipynb
@@ -139,18 +139,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "97d9fc85-75c0-4be4-8c5e-993ae4d00836",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deployment.apps/hello-minikube created\n",
+      "service/hello-minikube exposed\n"
+     ]
+    }
+   ],
    "source": [
     "%%sh\n",
-    "kubectl create deployment hello-minikube /\n",
+    "kubectl create deployment hello-minikube \\\n",
     "    --image=kicbase/echo-server:1.0\n",
-    "kubectl expose deployment hello-minikube /\n",
-    "    --type=NodePort /\n",
+    "kubectl expose deployment hello-minikube \\\n",
+    "    --type=NodePort \\\n",
     "    --port=8080"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a9b11b8-4ec3-4b5c-9bb3-b9121ab329f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
