Add and modify files

--- a/Container-Orchestration-Tutorial/sample-1/sample-1-nb.ipynb
+++ b/Container-Orchestration-Tutorial/sample-1/sample-1-nb.ipynb
@@ -163,8 +163,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9a9b11b8-4ec3-4b5c-9bb3-b9121ab329f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME             TYPE       CLUSTER-IP      EXTERNAL-IP   PORT(S)          AGE\n",
+      "hello-minikube   NodePort   10.96.108.229   <none>        8080:31480/TCP   51s\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kubectl get services hello-minikube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bcbbacd-aa39-45d6-ab17-52b2f07173ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !minikube service hello-minikube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "aabe1c00-7188-41b8-8c63-0fe414be5961",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forwarding from 0.0.0.0:7080 -> 8080\n",
+      "Handling connection for 7080\n",
+      "Handling connection for 7080\n",
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "# kubectl to forward the port\n",
+    "!kubectl port-forward service/hello-minikube 7080:8080 \\\n",
+    "    --address 0.0.0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "366d581e-42b4-4858-bf90-39f2a4dd4454",
+   "metadata": {},
+   "source": [
+    "### LoadBalancer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b1a353d-2622-415c-9c3f-d9ca2cc12580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "kubectl create deployment balanced \\\n",
+    "    --image=kicbase/echo-server:1.0\n",
+    "kubectl expose deployment balanced \\\n",
+    "    --type=LoadBalancer \\\n",
+    "    --port=8080"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a26ed43-e596-4e27-88a7-ca15bbf3f516",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start a new shell\n",
+    "# !minikube tunnel --bind-address='35.225.31.116'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de4c0750-ca15-492a-9d06-d28bf36a779a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !kubectl get services balanced\n",
+    "# Didn't work in Jupyter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78132862-0fe3-49cd-95c6-3df0a78c253b",
+   "metadata": {},
+   "source": [
+    "### Ingress"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46497c5a-70b2-416c-bcf7-63365f711377",
+   "metadata": {},
+   "source": [
+    "## Manage your cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04e8ee78-4dfa-4cd4-bd4a-4ab62b0f06fc",
    "metadata": {},
    "outputs": [],
    "source": []
