Add and modify files

--- a/CICD-Tutorial/1-sample-jenkins/1-sample-jenkins.ipynb
+++ b/CICD-Tutorial/1-sample-jenkins/1-sample-jenkins.ipynb
@@ -1,9 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6f43155f-9696-4319-90fb-1c8dcb04fc03",
+   "metadata": {},
+   "source": [
+    "# 1 Sample Jenkins\n",
+    "\n",
+    "Reference: jenkins.io/doc"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86c4a7bd-9c7a-4738-a994-1a30f50d16ab",
+   "id": "2493b585-f138-4927-b43f-a64bc5c94778",
    "metadata": {},
    "outputs": [],
    "source": []
