Add and modify files

--- a/CICD-Tutorial/1-sample-jenkins/1-sample-jenkins.ipynb
+++ b/CICD-Tutorial/1-sample-jenkins/1-sample-jenkins.ipynb
@@ -11,11 +11,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2493b585-f138-4927-b43f-a64bc5c94778",
+   "cell_type": "markdown",
+   "id": "d8bfddf3-c5a0-4411-949b-90ea121c321c",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Install Jenkins Docker\n",
+    "\n",
+    "Reference: jenkins.io/doc/book/installing/docker\n",
+    "\n",
+    "Go to install-jenkins/install-jenkins.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f32609bc-8461-409d-b2eb-94a8d50ae793",
+   "metadata": {},
    "source": []
   }
  ],
