Add and modify files

--- a/CICD-Tutorial/1-sample-jenkins/1-sample-jenkins.ipynb
+++ b/CICD-Tutorial/1-sample-jenkins/1-sample-jenkins.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "# Using GCP \n",
     "# Create a firewall: 0.0.0.0/0 and TCP:8000\n",
-    "# http://<IP_ADDRESS>:8000"
+    "# http://<EXTERNAL_IP_ADDRESS>:8000"
    ]
   },
   {
@@ -83,9 +83,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53a52fa5-5a23-4130-8c84-9d6ae1e607ec",
+   "metadata": {},
+   "source": [
+    "## Build a Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d7393aeb-1525-4f82-9a8f-a8dbe9bd36b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accessing the Docker container\n",
+    "# docker exec -it jenkins-blueocean sh"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e01ae21-5424-4cb7-8ec9-7cd1d4105ef3",
+   "id": "a6d1fd7e-6561-4208-a71d-82aa33a85ed9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accessing the Docker logs\n",
+    "!docker logs jenkins-blueocean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e3d85b-c817-44d8-a4dd-a26cde7abf96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accessing the Jenkins home directory\n",
+    "# docker exec -it jenkins-blueocean sh\n",
+    "# cd /var/jenkins_home"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54d1d4c2-3ab5-441f-804f-b143e4a01c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stopping and restarting Jenkins\n",
+    "!docker stop jenkins-blueocean jenkins-docker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72790b6a-1390-4d4c-a1f8-bd89d8c0ab02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start again\n",
+    "!docker start jenkins-blueocean jenkins-docker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "97f56f03-976c-494d-8811-fe0532397443",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing jenkinsfile\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile jenkinsfile\n",
+    "# Simple pipeline\n",
+    "pipeline {\n",
+    "    agent any\n",
+    "    stages {\n",
+    "        stage ('Test') {\n",
+    "            steps {\n",
+    "                echo \"It's working.\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c469511-f7ed-4c41-ac9e-c754cf65920c",
    "metadata": {},
    "outputs": [],
    "source": []
