Add and modify files

--- a/CICD-Tutorial/1-sample-jenkins/1-sample-jenkins.ipynb
+++ b/CICD-Tutorial/1-sample-jenkins/1-sample-jenkins.ipynb
@@ -177,8 +177,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5c469511-f7ed-4c41-ac9e-c754cf65920c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing jenkinsfile2\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile jenkinsfile2\n",
+    "# Simple pipeline\n",
+    "pipeline {\n",
+    "    agent any\n",
+    "    stages {\n",
+    "        stage ('Test') {\n",
+    "            steps {\n",
+    "                sh \"\"\"\n",
+    "                pwd\n",
+    "                \"\"\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "832a0080-5cab-46df-8394-014e02d6af78",
    "metadata": {},
    "outputs": [],
    "source": []
