Add and modify files

--- a/07-Continuous-Deployment-Tutorial/ArgoCD.ipynb
+++ b/07-Continuous-Deployment-Tutorial/ArgoCD.ipynb
@@ -1,9 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d0449b19-42bc-4c61-ba70-8e3cfecbfd88",
+   "metadata": {},
+   "source": [
+    "# ArgoCD Tutorial\n",
+    "\n",
+    "Reference: argo-cd.readthedocs.io"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f78f18b8-adbf-46a7-b003-d6f7f0c3c285",
+   "id": "f2f9cdd1-e32f-4284-af7f-67422427c66e",
    "metadata": {},
    "outputs": [],
    "source": []
