Add and modify files

--- a/07-Continuous-Deployment-Tutorial/ArgoCD.ipynb
+++ b/07-Continuous-Deployment-Tutorial/ArgoCD.ipynb
@@ -25,7 +25,7 @@
    "id": "2c6403e4-b70a-4b21-90b4-291f78409c42",
    "metadata": {},
    "source": [
-    "### Create a cluster\n",
+    "### (Option 1) Create a GKE cluster\n",
     "\n",
     "Reference: cloud.google.com/kubernetes-engine/docs"
    ]
@@ -124,6 +124,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27b84832-dfa6-4fa1-856f-7315e86bb600",
+   "metadata": {},
+   "source": [
+    "### (Option 2) Create a Minikube cluster"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a7fc3b08-a668-4698-873d-dd6c76bec01e",
    "metadata": {},
    "source": [
@@ -133,7 +141,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5c7007d5-2807-4e32-b6f5-9260fd5b0b2d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "67155096-1556-4a95-94f0-9a118509a69e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "namespace/argocd created\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kubectl create namespace argocd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29eaf4b5-df2f-4880-9969-a8dba5c6beb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ba8d6f1-c800-47f4-b57b-78f0320fe335",
+   "metadata": {},
+   "source": [
+    "### Access The Argo CD API Server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c88a0e46-30b1-4af1-b647-befb1b46f79d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl patch svc argocd-server -n argocd -p '{\"spec\": {\"type\": \"LoadBalancer\"}}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1442b8ad-7ee8-4299-a134-ab83dd715aad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl port-forward svc/argocd-server -n argocd 8080:443"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "238c28e4-43de-4e45-97d1-e6aedfcc7e95",
    "metadata": {},
    "outputs": [],
    "source": []
