Add and modify files

--- a/07-Continuous-Deployment-Tutorial/ArgoCD.ipynb
+++ b/07-Continuous-Deployment-Tutorial/ArgoCD.ipynb
@@ -70,19 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "66504bdc-e883-464e-ad6e-e3f9664d90af",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching cluster endpoint and auth data.\n",
-      "kubeconfig entry generated for matt-argocd.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Connect to the cluster\n",
     "!gcloud container clusters get-credentials matt-argocd \\\n",
@@ -131,6 +122,67 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "fd057fb5-9516-4a23-85c9-f8c68d9168e8",
+   "metadata": {},
+   "source": [
+    "# Reference: kubernetes.io/docs\n",
+    "\n",
+    "# Install kubectl on Linux\n",
+    "# Referene: https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/\n",
+    "\n",
+    "# Install kubectl binary with curl on Linux\n",
+    "curl -LO \"https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl\"\n",
+    "sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl\n",
+    "kubectl version --client --output=yaml\n",
+    "\n",
+    "# Install using native package management\n",
+    "sudo apt-get update\n",
+    "# apt-transport-https may be a dummy package; if so, you can skip that package\n",
+    "sudo apt-get install -y apt-transport-https ca-certificates curl\n",
+    "curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.28/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg\n",
+    "# This overwrites any existing configuration in /etc/apt/sources.list.d/kubernetes.list\n",
+    "echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.28/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list\n",
+    "sudo apt-get update\n",
+    "sudo apt-get install -y kubectl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df0dc050-45e6-4e0e-855b-238081991f06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "## Install Minkinube\n",
+    "curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64\n",
+    "sudo install minikube-linux-amd64 /usr/local/bin/minikube\n",
+    "# Start Minikube\n",
+    "minikube start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b369bee-811a-492d-8bd6-7e85e28b29d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get namespaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dd015ee-a171-45ec-be94-edcb0607c64d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat ~/.kube/config"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a7fc3b08-a668-4698-873d-dd6c76bec01e",
    "metadata": {},
@@ -141,25 +193,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c7007d5-2807-4e32-b6f5-9260fd5b0b2d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "67155096-1556-4a95-94f0-9a118509a69e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "namespace/argocd created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl create namespace argocd"
    ]
@@ -172,6 +208,28 @@
    "outputs": [],
    "source": [
     "!kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1416dcd1-0b9c-4a0e-b83f-0e9bcc4de61e",
+   "metadata": {},
+   "source": [
+    "### Download Argo CD CLI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9559c30-a5bf-483e-9076-796da0ec4c7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "# Latest Version\n",
+    "curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64\n",
+    "sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd\n",
+    "rm argocd-linux-amd64"
    ]
   },
   {
@@ -199,16 +257,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl port-forward svc/argocd-server -n argocd 8080:443"
+    "# RUn in another terminal\n",
+    "!kubectl port-forward svc/argocd-server -n argocd 8000:443 --address 0.0.0.0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "238c28e4-43de-4e45-97d1-e6aedfcc7e95",
+   "id": "12741e3a-c45e-4a94-a24a-755c982401e7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!argocd admin initial-password -n argocd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02e4d989-f0ef-46ce-82df-e8511a76d3c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# USERNAME: ADMIN\n",
+    "# PASSORD: <!argocd admin initial-password -n argocd> #password\n",
+    "\n",
+    "# You can change it using the UI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77843d5c-dfbb-4865-a854-5a4be7d17a6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# argocd login <ARGOCD_SERVER>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63b59818-7dc1-478e-a53c-4c97a5533914",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !argocd account update-password"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1df4abd5-e79f-43ba-befc-3ec824a6811c",
+   "metadata": {},
+   "source": [
+    "### Create an application from a git repository"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa894704-b9c7-4c1b-bf10-a91a79cee718",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Apps Via CLI\n",
+    "# !kubectl config set-context --current --namespace=argocd\n",
+    "# !argocd app create guestbook --repo https://github.com/argoproj/argocd-example-apps.git --path guestbook --dest-server https://kubernetes.default.svc --dest-namespace default"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52bb898e-3eb6-4c97-9e50-7dfc55738724",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Apps Via UI"
+   ]
   }
  ],
  "metadata": {
