Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
@@ -142,27 +142,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "2706ffec-affd-4468-bf86-f3c9fa877aca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"grafana\" already exists with the same configuration, skipping\n",
-      "Hang tight while we grab the latest from your chart repositories...\n",
-      "...Successfully got an update from the \"grafana\" chart repository\n",
-      "Update Complete. ⎈Happy Helming!⎈\n",
-      "Release \"grafana-k8s-monitoring\" does not exist. Installing it now.\n",
-      "NAME: grafana-k8s-monitoring\n",
-      "LAST DEPLOYED: Thu Nov  2 06:46:00 2023\n",
-      "NAMESPACE: default\n",
-      "STATUS: deployed\n",
-      "REVISION: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sh\n",
     "helm repo add grafana https://grafana.github.io/helm-charts &&\n",
@@ -194,8 +177,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "da967e28-3b98-4663-99cf-0c5ce3cd1eb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Display resource (CPU/memory) usage.\n",
+      "\n",
+      " The top command allows you to see the resource consumption for nodes or pods.\n",
+      "\n",
+      " This command requires Metrics Server to be correctly configured and working on\n",
+      "the server.\n",
+      "\n",
+      "Available Commands:\n",
+      "  node          Display resource (CPU/memory) usage of nodes\n",
+      "  pod           Display resource (CPU/memory) usage of pods\n",
+      "\n",
+      "Usage:\n",
+      "  kubectl top [flags] [options]\n",
+      "\n",
+      "Use \"kubectl top <command> --help\" for more information about a given command.\n",
+      "Use \"kubectl options\" for a list of global command-line options (applies to all\n",
+      "commands).\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kubectl top "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "39ea7109-fe61-4208-b051-a15a4c7ee763",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME                                                         READY   STATUS    RESTARTS   AGE\n",
+      "grafana-k8s-monitoring-grafana-agent-0                       2/2     Running   0          15m\n",
+      "grafana-k8s-monitoring-grafana-agent-logs-n6xfs              2/2     Running   0          16m\n",
+      "grafana-k8s-monitoring-kube-state-metrics-7c5b5d844c-zf22h   1/1     Running   0          16m\n",
+      "grafana-k8s-monitoring-opencost-fdd5b98cb-z6w85              1/1     Running   0          16m\n",
+      "grafana-k8s-monitoring-prometheus-node-exporter-q2np7        1/1     Running   0          16m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kubectl get pods "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "1d21965a-7d3c-4923-bd84-99ddb48c9f83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME                                        READY   UP-TO-DATE   AVAILABLE   AGE\n",
+      "grafana-k8s-monitoring-kube-state-metrics   1/1     1            1           16m\n",
+      "grafana-k8s-monitoring-opencost             1/1     1            1           16m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kubectl get deployments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "508f0189-5287-4a50-b3eb-7742a556908f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME       STATUS   ROLES           AGE   VERSION\n",
+      "minikube   Ready    control-plane   19m   v1.27.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kubectl get nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "4757694c-339f-44e6-9e9b-a9adc4bce651",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME                                                             READY   STATUS    RESTARTS   AGE\n",
+      "pod/grafana-k8s-monitoring-grafana-agent-0                       2/2     Running   0          16m\n",
+      "pod/grafana-k8s-monitoring-grafana-agent-logs-n6xfs              2/2     Running   0          16m\n",
+      "pod/grafana-k8s-monitoring-kube-state-metrics-7c5b5d844c-zf22h   1/1     Running   0          16m\n",
+      "pod/grafana-k8s-monitoring-opencost-fdd5b98cb-z6w85              1/1     Running   0          16m\n",
+      "pod/grafana-k8s-monitoring-prometheus-node-exporter-q2np7        1/1     Running   0          16m\n",
+      "\n",
+      "NAME                                                      TYPE        CLUSTER-IP      EXTERNAL-IP   PORT(S)    AGE\n",
+      "service/grafana-k8s-monitoring-grafana-agent              ClusterIP   10.111.250.87   <none>        80/TCP     16m\n",
+      "service/grafana-k8s-monitoring-grafana-agent-cluster      ClusterIP   None            <none>        80/TCP     16m\n",
+      "service/grafana-k8s-monitoring-grafana-agent-logs         ClusterIP   10.100.92.248   <none>        80/TCP     16m\n",
+      "service/grafana-k8s-monitoring-kube-state-metrics         ClusterIP   10.111.58.231   <none>        8080/TCP   16m\n",
+      "service/grafana-k8s-monitoring-opencost                   ClusterIP   10.98.4.197     <none>        9003/TCP   16m\n",
+      "service/grafana-k8s-monitoring-prometheus-node-exporter   ClusterIP   10.100.19.212   <none>        9100/TCP   16m\n",
+      "service/kubernetes                                        ClusterIP   10.96.0.1       <none>        443/TCP    19m\n",
+      "\n",
+      "NAME                                                             DESIRED   CURRENT   READY   UP-TO-DATE   AVAILABLE   NODE SELECTOR            AGE\n",
+      "daemonset.apps/grafana-k8s-monitoring-grafana-agent-logs         1         1         1       1            1           kubernetes.io/os=linux   16m\n",
+      "daemonset.apps/grafana-k8s-monitoring-prometheus-node-exporter   1         1         1       1            1           kubernetes.io/os=linux   16m\n",
+      "\n",
+      "NAME                                                        READY   UP-TO-DATE   AVAILABLE   AGE\n",
+      "deployment.apps/grafana-k8s-monitoring-kube-state-metrics   1/1     1            1           16m\n",
+      "deployment.apps/grafana-k8s-monitoring-opencost             1/1     1            1           16m\n",
+      "\n",
+      "NAME                                                                   DESIRED   CURRENT   READY   AGE\n",
+      "replicaset.apps/grafana-k8s-monitoring-kube-state-metrics-7c5b5d844c   1         1         1       16m\n",
+      "replicaset.apps/grafana-k8s-monitoring-opencost-fdd5b98cb              1         1         1       16m\n",
+      "\n",
+      "NAME                                                    READY   AGE\n",
+      "statefulset.apps/grafana-k8s-monitoring-grafana-agent   1/1     16m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kubectl get all "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "5ab0d1b3-9efa-4d7f-ab57-8d68638ce965",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME              STATUS   AGE\n",
+      "default           Active   19m\n",
+      "kube-node-lease   Active   19m\n",
+      "kube-public       Active   19m\n",
+      "kube-system       Active   19m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kubectl get namespaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "603b918f-f24d-4e40-910f-1f2c93fe73e4",
    "metadata": {},
    "outputs": [],
    "source": []
